Support overlapping sell definitions and priority